--- a/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
+++ b/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
@@ -61,7 +61,8 @@
   <ItemGroup>
     <Compile Include="AccountData.cs" />
     <Compile Include="GroupData.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="AddNewContact.cs" />
+    <Compile Include="NewContactData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GroupCreationTests.cs" />
   </ItemGroup>
