--- a/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
+++ b/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
@@ -67,6 +67,8 @@
     <Compile Include="NewContactData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GroupCreationTests.cs" />
+    <Compile Include="TestBase.cs" />
+    <Compile Include="GroupRemovalTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
