Создание классов-помощников (лекция 2.2)

--- a/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
+++ b/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
@@ -64,6 +64,10 @@
     <Compile Include="AccountData.cs" />
     <Compile Include="GroupData.cs" />
     <Compile Include="AddNewContact.cs" />
+    <Compile Include="GroupHelper.cs" />
+    <Compile Include="HelperBase.cs" />
+    <Compile Include="LoginHelper.cs" />
+    <Compile Include="NavigationHelper.cs" />
     <Compile Include="NewContactData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GroupCreationTests.cs" />
