--- a/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
+++ b/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Model\AddressbookDB.cs" />
     <Compile Include="Tests\AuthTestBase.cs" />
     <Compile Include="Tests\ContactInformationTests.cs" />
+    <Compile Include="Tests\GroupTestBase.cs" />
     <Compile Include="Tests\LoginTests.cs" />
     <Compile Include="Tests\ContactRemovalTests.cs" />
     <Compile Include="Tests\ContactModificationTests.cs" />
