--- a/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
+++ b/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
@@ -82,6 +82,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\AddressbookDB.cs" />
+    <Compile Include="Model\GroupContactRelation.cs" />
+    <Compile Include="Tests\AddingContactToGroupTests.cs" />
     <Compile Include="Tests\AuthTestBase.cs" />
     <Compile Include="Tests\ContactInformationTests.cs" />
     <Compile Include="Tests\ContactsTestBase.cs" />
