--- a/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
+++ b/Addressbook_tests/Addressbook_tests/Addressbook_tests.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Model\ContactData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\GroupCreationTests.cs" />
+    <Compile Include="Tests\RemoveContactFromGroupTests.cs" />
     <Compile Include="Tests\TestBase.cs" />
     <Compile Include="Tests\GroupRemovalTests.cs" />
   </ItemGroup>
