Задание №17: сделать тесты для добавления контактов в группы и удаления контактов из групп (исправлен App.config)

--- a/Addressbook_tests/addressbook-test-data-generators/App.config
+++ b/Addressbook_tests/addressbook-test-data-generators/App.config
@@ -1,13 +1,6 @@
-﻿<? xml version = " 1.0 " encoding = " utf-8 " ?>
-< конфигурация >
-  < system .data>
-    < DbProviderFactories >
-      < remove  invariant = " MySql.Data.MySqlClient " />
-      < add  name = " Поставщик данных MySQL "  invariant = " MySql.Data.MySqlClient "  description = " Поставщик данных .Net Framework для MySQL "  type = " MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version = 6.9.3.0, Культура = нейтральная, PublicKeyToken = c5687fc88969c44d " />
-    </ DbProviderFactories >
-  </ system .data>
-  < connectionStrings >
-    < add  name = " Адресная книга "
-			connectionString = " Сервер = localhost; Порт = 3306; База данных = адресная книга; Uid = root; Pwd =; charset = utf8; Разрешить нулевое значение Datetime = true "  providerName = " MySql.Data.MySqlClient " />
-  </ connectionStrings >
-</ configuration >
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+</configuration>
