--- a/mantis-tests/mantis-tests/mantis-tests.csproj
+++ b/mantis-tests/mantis-tests/mantis-tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="tests\AuthTestBase.cs" />
     <Compile Include="tests\LoginTests.cs" />
     <Compile Include="tests\ProjectCreationTests.cs" />
+    <Compile Include="tests\ProjectRemoveTests.cs" />
     <Compile Include="tests\TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
