--- a/mantis-tests/mantis-tests/mantis-tests.csproj
+++ b/mantis-tests/mantis-tests/mantis-tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="appmanager\FtpHelper.cs" />
     <Compile Include="appmanager\HelperBase.cs" />
     <Compile Include="appmanager\LoginHelper.cs" />
+    <Compile Include="appmanager\ManagementMenuHelper.cs" />
     <Compile Include="appmanager\ProjectHelper.cs" />
     <Compile Include="appmanager\RegistrationHelper.cs" />
     <Compile Include="model\AccountData.cs" />
